# Eshant_Portfolio

./: pyproject.toml  readme.md  requirements.txt
app/: auth.py  main.py
app/router/: chat.py  documents.py  home.py
app/templates/: homepage.html
core/: constants.py
portfolio_model/: llms.py  workflow.py
portfolio_model/core/: prompts.py
portfolio_model/utils/: constants.py
