[project]
name = "eshant-portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.138.0",
    "jinja2>=3.1.6",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.6",
    "langgraph-prebuilt>=1.1.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.13.0",
    "uvicorn[standard]>=0.49.0",
]
